--- a/tpl/lumia.html
+++ b/tpl/lumia.html
@@ -8,6 +8,53 @@
 
 		<div class="lumia-display-head">Nokia</div>
 
+		<div class="lumia-screen">
+
+			<div class="lumia-screen-headline">
+				<div class="lumia-icon-celuar"></div>
+				<div class="lumia-icon-wifi"></div>
+				<div class="lumia-icon-battery"></div>
+				<div class="lumia-headline-time"></div>
+			</div>
+
+			<div class="lumia-lockscreen">
+				<div class="lumia-lockscreen-time"><span></span>
+					<div class="lumia-lockscreen-time-icon"><i></i></div>
+				</div>
+				<div class="lumia-lockscreen-date"></div>
+			</div>
+
+			<div class="lumia-icon-big lumia-icon-1">
+				<div class="lumia-i-phone"></div>
+				<div class="lumia-icon-title">No SIM</div>
+			</div>
+			<div class="lumia-icon-big lumia-icon-2">
+				<div class="lumia-i-messaging">;-)</div>
+				<div class="lumia-icon-title">Messaging</div>
+			</div>
+			<div class="lumia-icon-big lumia-icon-3">
+				<div class="lumia-i-email"></div>
+				<div class="lumia-icon-title">Email</div>
+			</div>
+			<div class="lumia-icon-small lumia-icon-4">
+				<div class="lumia-i-calendar"></div>
+			</div>
+			<div class="lumia-icon-small lumia-icon-5">
+				<div class="lumia-i-calculator"></div>
+			</div>
+			<div class="lumia-icon-small lumia-icon-6">
+				<div class="lumia-icon-highlights"></div>
+			</div>
+			<div class="lumia-icon-small lumia-icon-7"></div>
+			<div class="lumia-icon-big lumia-icon-8">
+				<div class="lumia-i-camera"><div class="lumia-i-camera-obj"></div></div>
+				<div class="lumia-icon-title">Camera</div>
+			</div>
+			<div class="lumia-icon-small lumia-icon-9"></div>
+
+			<div class="lumia-icon-go2apps"></div>
+		</div>
+
 		<div class="lumia-loading">
 			<div class="lumia-loading-dot"></div>
 			<div class="lumia-loading-dot"></div>
