Thanks a lot to Nishant Kothary

--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
 	<br class="clear">
 
 	<div class="block-description">
+		PS: Thanks a lot to <b><a href="http://rainypixels.com/" target="_blank">Nishant Kothary</a></b> for an amazing device ;)
+	</div>
+
+	<div class="block-description">
 		<div id="disqus_thread"></div>
 		<script type="text/javascript">
 			/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
