--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
 
 	<link href="css/page.css" rel="stylesheet" type="text/css"/>
 	<link href="css/lumia.css" rel="stylesheet" type="text/css"/>
+
+
+	<script type="text/javascript">
+		var _gaq = _gaq || [];
+		_gaq.push( ['_setAccount', 'UA-26203716-1'] );
+		_gaq.push( ['_setDomainName', 'tjrus.com'] );
+		_gaq.push( ['_trackPageview'] );
+
+		(function (){
+			var ga = document.createElement( 'script' );
+			ga.type = 'text/javascript';
+			ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName( 'script' )[0];
+			s.parentNode.insertBefore( ga, s );
+		})();
+	</script>
+
 </head>
 
 <body>
@@ -103,7 +121,8 @@
 	<br class="clear">
 
 	<div class="block-description">
-		PS: Thanks a lot to <b><a href="http://rainypixels.com/" target="_blank">Nishant Kothary</a></b> for an amazing device ;)
+		PS: Thanks a lot to
+		<b><a href="http://rainypixels.com/" target="_blank">Nishant Kothary</a></b> for an amazing device ;)
 	</div>
 
 	<div class="block-description">
