fix social image

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 	<title>Imageless Lumia 800</title>
 
 	<meta property="og:title" content="Imageless Lumia 800 in CSS3!"/>
-	<meta property="og:image" content="img/lumia.jpg"/>
+	<meta property="og:image" content="http://tjrus.com/lumia/img/lumia.jpg"/>
 	<meta property="og:description" content="Imageless Lumia 800 in CSS3! This rendering of Lumia 800 and its icons were made in pure CSS3. No images, no base64, no SVG, no canvas, just a lot of CSS3 lines of CSS code and a little bit of Javascript code (with jQuery, of course)."/>
 
 	<meta itemprop="name" content="Imageless Lumia 800 in CSS3!">
-	<meta itemprop="image" content="img/lumia.jpg">
+	<meta itemprop="image" content="http://tjrus.com/lumia/img/lumia.jpg">
 	<meta itemprop="description" content="Imageless Lumia 800 in CSS3! This rendering of Lumia 800 and its icons were made in pure CSS3. No images, no base64, no SVG, no canvas, just a lot of CSS3 lines of CSS code and a little bit of Javascript code (with jQuery, of course).">
 
 	<link href="css/page.css" rel="stylesheet" type="text/css"/>
