--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 	<meta property="og:title" content="Imageless Lumia 800 in CSS3!"/>
 	<meta property="og:image" content="http://tjrus.com/lumia/img/lumia.jpg"/>
-	<meta property="og:description" content="Imageless Lumia 800 in CSS3! This rendering of Lumia 800 and its icons were made in pure CSS3. No images, no base64, no SVG, no canvas, just a lot of CSS3 lines of CSS code and a little bit of Javascript code (with jQuery, of course)."/>
+	<meta property="og:description" content="Imageless Lumia 800 in CSS3! This rendering of Lumia 800 and its icons were made in pure CSS3. No images, no base64, no SVG, no canvas, just a lot of CSS3 and a little bit of Javascript (with jQuery, of course)."/>
 
 	<meta itemprop="name" content="Imageless Lumia 800 in CSS3!">
 	<meta itemprop="image" content="http://tjrus.com/lumia/img/lumia.jpg">
-	<meta itemprop="description" content="Imageless Lumia 800 in CSS3! This rendering of Lumia 800 and its icons were made in pure CSS3. No images, no base64, no SVG, no canvas, just a lot of CSS3 lines of CSS code and a little bit of Javascript code (with jQuery, of course).">
+	<meta itemprop="description" content="Imageless Lumia 800 in CSS3! This rendering of Lumia 800 and its icons were made in pure CSS3. No images, no base64, no SVG, no canvas, just a lot of CSS3 and a little bit of Javascript (with jQuery, of course).">
 
 	<link href="css/page.css" rel="stylesheet" type="text/css"/>
 	<link href="css/lumia.css" rel="stylesheet" type="text/css"/>
@@ -104,7 +104,7 @@
 
 		<div class="block-description">
 			<h3>Description:</h3>
-			<p>This rendering of Lumia 800 and its icons were made in pure CSS3. No images, no base64, no SVG, no canvas, just a lot of CSS3 lines of CSS code and a little bit of Javascript code (with jQuery, of course).</p>
+			<p>This rendering of Lumia 800 and its icons were made in pure CSS3. No images, no base64, no SVG, no canvas, just a lot of CSS3 and a little bit of Javascript (with jQuery, of course).</p>
 			<p>Viewed best with the latest versions of Safari and Chrome in Mac OS X.</p>
 		</div>
 
